--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <body>
    <p>Radio check. Pilot, please confirm.</p>
    <p>Radio check has been confirmed. Good to hear you Control!</p>
+   <p>Are you ready to launhc?</p>
 </body>
 </html>
