Added fourth line to the log.

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
    <p>Radio check. Pilot, please confirm.</p>
    <p>Radio check has been confirmed. Good to hear you Control!</p>
    <p>Are you ready to launhc?</p>
+   <p>I am not ready to launhc. I am ready to launch!</p>
 </body>
 </html>
